--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(16, 16px);
-  grid-template-rows: repeat(15, 16px);
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  height: 100vh;
+  width: 100vw;
 }
 
-.grass {
-  background-image: url('./sprites/tiles.png');
-  background-repeat: no-repeat;
-  height: 16px;
-  width: 16px;
-  background-position: -2px -69px;
+.white {
+  background: white;
+}
+
+.black {
+  background: black;
 }
