--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 
 .board {
   z-index: 0;
-  opacity: 0.5;
+  opacity: 0.25;
 }
 
 .pieces {
@@ -31,6 +31,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 70%;
+}
+
+.PIECE:hover {
+  background-color: lightgreen;
 }
 
 .BLACK.ROOK {
