--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,17 @@
+.game-container {
+  width: 384px;
+  margin: auto;
+}
+
 .board,
 .pieces,
 .highlights {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 1fr);
-  height: 100vh;
-  width: 100vw;
+  grid-template-columns: repeat(8, 48px);
+  grid-template-rows: repeat(8, 48px);
+  /*height: 100vh;*/
+  /*width: 100vw;*/
   position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .board {
