--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,11 @@
   background: red;
 }
 
+.square {
+  border: 1px solid sandybrown;
+  background: saddlebrown;
+}
+
 .PIECE {
   background-repeat: no-repeat;
   background-position: center;
