--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,7 @@
   margin: auto;
 }
 
-.board,
-.pieces,
-.highlights {
+.board {
   display: grid;
   grid-template-columns: repeat(8, 48px);
   grid-template-rows: repeat(8, 48px);
@@ -14,38 +12,12 @@
   position: absolute;
 }
 
-.board {
-  z-index: 0;
-  /*opacity: 0.25;*/
-}
-
-.highlights {
-  z-index: 1;
-  opacity: 0.25;
-}
-
-.pieces {
-  z-index: 2;
-}
-
-.white.SQUARE {
-  background: gray;
-}
-
-.black.SQUARE {
-  background: darkgray;
-}
-
-.HIGHLIGHT {
-  background: red;
-}
-
 .square {
   border: 1px solid sandybrown;
   background: saddlebrown;
 }
 
-.PIECE {
+.piece {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 80%;
