--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@
     background-size: 80%;
 }
 
+.selected {
+    background-color: darkgreen;
+}
+
 .selectable:hover {
     background-color: cornflowerblue;
 }
